--- a/Financial Control/project/public/css/style.css
+++ b/Financial Control/project/public/css/style.css
@@ -34,7 +34,39 @@ input::placeholder{
     width: 140px;
 }
 
-.sign-up {
+.images {
+
+    display: inline-block;
+    position: relative;
+}
+.images img{
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.images .edit-icon {
+    position: absolute; 
+    top: 39%; 
+    text-align: center; 
+    width: 30px; 
+    height: 30px;
+    opacity: 0;
+}
+
+.images:hover .edit-icon {
+    opacity: 1;
+    transition: 0.3s;
+}
+
+#perfil-img {
+    -webkit-filter:blur(0px) brightness(100%);
+}
+
+.images:hover #perfil-img {
+    -webkit-filter: blur(3px) brightness(80%);
+    transition: 0.3s;
+}
+.sign-up, .greetings, .message {
     text-align: center;
     margin-top: 10px;
     margin-bottom: 20px;
@@ -122,7 +154,7 @@ button {
     border: none;
     margin-top: 10px;
     cursor: pointer;
-
+    font-weight: bold;
 }
 
 button:not([disabled]):active {
@@ -162,4 +194,8 @@ hr {
 
 .centered-div .imgAvatar {
         border-radius: 50%;
+}
+
+.action {
+    display: flex;
 }
