--- a/Financial Control/project/public/css/style.css
+++ b/Financial Control/project/public/css/style.css
@@ -6,6 +6,43 @@
     box-sizing: border-box;
 }
 
+table {
+    border-spacing: 0;
+    text-align: center;
+    border-collapse: separate;
+    overflow: hidden;
+
+}
+
+th {
+    border: 2px solid #fdbe47;
+    background-color: #fdbe47;
+    border-style: solid solid solid none;
+      padding: 5px 0; 
+}
+
+td {
+    padding: 5px;
+}
+
+th:first-child {
+    border-top-left-radius: 13px;
+    border-style: solid solid solid solid;
+}
+
+th:last-child {
+    border-top-right-radius: 13px;
+}
+
+/* Arredondar os cantos inferior direito e inferior esquerdo */
+tr:last-child td:first-child {
+    border-bottom-left-radius: 13px;
+}
+
+tr:last-child td:last-child {
+    border-bottom-right-radius: 13px;
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -18,6 +55,7 @@ input::placeholder{
     opacity: 0.5;
 }
 .centered-div {
+    position: relative;
     margin-top: -100px;
     width: 460px;
     border-radius: 25px;
@@ -25,7 +63,32 @@ input::placeholder{
     background-color: rgb(248, 248, 248);;
     box-shadow: 6px 5px 10px #9c690b;
 }
+.home-form{
+    width: auto;
+    margin-top: -350px;
+    margin-left: 4%;
+    margin-right: 4%;
 
+}
+.spinner {
+    margin-top: 55px;
+    margin-bottom: 55px;
+    top: 35%;
+    left: 35%; 
+    text-align: center; 
+    border: 8px solid #f3f3f3; 
+    border-top: 8px solid #ffab10; 
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+}
+
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 .centered-div img {
     position: relative;
     left: 50%;
